# meowl-pet

./: CLAUDE.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
