[package]
name = "meowl-pet"
version = "0.1.0"
edition = "2021"

[lib]
name = "meowl_pet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
evdev = "0.12"
